--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,12 @@
 <div>
-    <h1 class="title">Vào nhóm chat</h1>
+    <div class="title">
+      <h1 >Vào nhóm chat</h1>
+      <span style="margin-left: auto;"> 
+        <button (click)="createGroup()" mat-icon-button  matTooltip="Tạo nhóm chat"  matTooltipPosition="left">
+          <mat-icon color="white">add_circle</mat-icon>
+        </button>
+      </span>
+    </div>
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
@@ -10,9 +17,12 @@
             <p class="mb-8 leading-relaxed">...</p>
             <div class="flex w-full md:justify-start justify-center align-items-center mb-8">
               <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4">
-                <input type="text" id="hero-field" name="hero-field" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:ring-2 focus:ring-indigo-200 focus:bg-transparent focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                <input type="text" id="hero-field" name="hero-field" (ngModel)="roomId" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:ring-2 focus:ring-indigo-200 focus:bg-transparent focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
-              <button mat-raised-button color="warn" class="">Vào phòng</button>
+              <button mat-raised-button color="warn" (click)="Find()" class="">Vào phòng</button>
+              <div *ngIf="GetWaiting()" class="ml-4">
+                <mat-spinner color="warn" style="width: 38px;"></mat-spinner>
+              </div>
             </div>
             <div class="flex lg:flex-row md:flex-col">
               <button class="bg-gray-100 inline-flex py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
