--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -1,21 +1,43 @@
-<div>
+<div *ngIf="user">
     <h1 class="title">Thông tin tài khoản</h1>
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-col">
           <div class="lg:w-4/6 mx-auto">
             <div class="flex flex-col sm:flex-row mt-10">
-              <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
-                <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
-                    <img src="assets/rabbit.png" class="w-20 h-20" alt="" matTooltip="Cập nhập ảnh đại diện">
+              <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8 ">
+                
+                <div class="w-20 h-20 relative rounded-full  inline-flex items-center justify-center bg-gray-200 text-gray-400 cursor" >
+                  <label for="fileInput" class="absolute custom-file-upload btn-image">
+                    <input type="file" id="fileInput" (change)="ChangeAvatar($event)">
+                    <mat-icon matTooltip="Cập nhập ảnh đại diện">add_a_photo</mat-icon>
+                  </label>
+                  <img [src]="user.avatar ? user.avatar : 'assets/rabbit.png'" class="w-20 h-20 rounded-full" alt="" >
                 </div>
                 <div class="flex flex-col items-center text-center justify-center">
-                  <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Tên tài khoản</h2>
-                  <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4"></div>
-                  <p class="text-base">Giới thiệu của app</p>
+                  
+                  <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">
+                    <form [formGroup]="userform" (ngSubmit)="Submit()">
+                      <mat-form-field class="w-full">
+                        <input matInput formControlName="fullname" [readonly]="!isEditMode" style="width: 73%;" class="text-xl">
+                        <mat-error *ngIf="userform.get('fullname')?.hasError('minlength')">
+                          Họ tên không được quá ngắn
+                        </mat-error>
+                        <button mat-icon-button type="button"  class="" (click)="toggleEditMode()" [title]="isEditMode ? 'Hủy' : 'Chỉnh sửa'">
+                          <mat-icon>{{ isEditMode ? 'cancel' : 'edit' }}</mat-icon>
+                        </button>
+                      </mat-form-field>
+                      <button *ngIf="isEditMode" mat-raised-button color="warn">Cập nhập</button>
+                    </form>
+                  </h2>
+                  <div class="w-12 h-1 bg-red-500 rounded mt-2 mb-4"></div>
+                  <p class="text-base">{{ user.email }}</p>
                 </div>
               </div>
               <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-200 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
-                <p class="leading-relaxed text-lg mb-4">Meggings portland fingerstache lyft, post-ironic fixie man bun banh mi umami everyday carry hexagon locavore direct trade art party. Locavore small batch listicle gastropub farm-to-table lumbersexual salvia messenger bag. Coloring book flannel truffaut craft beer drinking vinegar sartorial, disrupt fashion axe normcore meh butcher. Portland 90's scenester vexillologist forage post-ironic asymmetrical, chartreuse disrupt butcher paleo intelligentsia pabst before they sold out four loko. 3 wolf moon brooklyn.</p>
+                <p class="leading-relaxed text-lg mb-4">Nếu đã từng vào nhà hàng kiểu ngồi (sit-down restaurant), bạn sẽ hiểu được những kiến thức cơ bản về Express. Nhưng nếu chỉ mới build backend Node.js lần đầu thì… bạn sẽ gặp khá nhiều khó khăn.
+                  Yes, nếu đã làm việc với Javascript bạn sẽ học Node nhanh hơn. Nhưng thách thức đối mặt khi xây dựng backend hoàn toàn khác với những thách thức khi sử dụng Javascript ở frontend.
+                  Khi học Node, tôi đã chọn 1 cách học khó nhằn là nghiên cứu eBooks, các tài liệu hướng dẫn, videos.. cứ như vậy cho đến khi thực sự hiểu tại sao mình lại làm những gì mình đang làm.
+                  Nhưng có 1 cách dễ hiểu hơn, là sử dụng câu chuyện so sánh liên quan đến nhà hàng kiểu ngồi để giải thích 4 phần quan trọng nhất trong app Express đầu tiên của bạn. Express.js là 1 framework dùng để sắp xếp code nổi tiếng, thường được các bạn mới bắt đầu code sử dụng.</p>
               </div>
             </div>
           </div>
