--- a/src/app/search/create/create.component.html
+++ b/src/app/search/create/create.component.html
@@ -1,16 +1,15 @@
-<div class="mt-4 mb-3">
-    <form [formGroup]="crategroupform" (ngSubmit)="submit()">
+<div class="mt-4 mb-3 ml-3 mr-3">
+    <form [formGroup]="creategroupform" (ngSubmit)="submit()">
         <mat-form-field class="block"> 
           <mat-label>Tên nhóm chat</mat-label>
-          <input matInput  formControlName="groupName" autocomplete="">
+          <input matInput  formControlName="groupName" >
         </mat-form-field>
-        <mat-form-field class="block">
+        <div class="block">
             <mat-slide-toggle formControlName="publicGroup" labelPosition="before">Nhóm công khai :</mat-slide-toggle>
-        </mat-form-field>
+        </div>
 
-        <div class="mt-1 d-flex justify-content-center">
+        <div class="mt-3 d-flex justify-content-center">
             <button mat-raised-button color="warn" >Tạo</button>
         </div>
     </form>
 </div>
-
