--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,14 +1,26 @@
-<div style="display: flex; flex-direction: column; height: 100%;">
-    <div>
+<div class="flex pl-3 pr-3" style=" flex-direction: column; height: 100%;">
+    <div class="flex w-100 sm:justify-between">
+        <div class="flex items-center pl-3 pr-3 pt-1 pb-1 rounded-full hover:bg-red-500 text-lg text-white" style="background-color: #f85959;">
+            {{ group.name }} 
+            <mat-icon class="ml-2 " style="cursor: pointer;" (click)="copyToClipboard()" matTooltip="Copy ID nhóm" matTooltipPosition="right" >code</mat-icon>
+        </div>
 
     </div>
-    <div class="ml-10 " style="margin-top: auto;">
+    <div>
+        <li *ngFor="let mes of group.messages" class="list-unstyled">
+            <p class="mt-3 pl-3 pr-3 pt-2 pb-2 bg-red-500 text-white">
+                <img [src]="mes.user.avatar ? mes.user.avatar : 'assets/rabbit.png'" class="w-10 h-10 rounded-full" alt="" >
+                {{ mes.text }}
+            </p>
+        </li>
+    </div>
+    <form class="ml-10 " style="margin-top: auto;" [formGroup]="chatform" (ngSubmit)="send()">
         <mat-form-field style="width: 90%;">
-            <mat-label>Gửi tin nhắn</mat-label>
-            <textarea matInput></textarea>
+            <mat-label>Nhập tin nhắn</mat-label>
+            <textarea type="text" matInput formControlName="message"></textarea>
         </mat-form-field>
-        <button mat-icon-button color="warn" class="ml-5 text-center">
+        <button mat-icon-button color="warn" class="ml-3 inline-flex text-center items-center">
             <mat-icon >send</mat-icon>
         </button>
-    </div>
+    </form>
 </div>
