--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
       
-    <div style="margin-left:5%; height: 100%;" class="mt-3">
+    <div style="margin-left:5%; height: 100%;" class="">
         <router-outlet></router-outlet>
     </div>
 </div>
